rebuilt instset and skills docs.