@@ -138,19 +138,14 @@ mtron> @/dev/scratch >>= +[command => [mvn_build => !ide:command('mvn -f src/tes
 mtron> */dev/scratch/command/mvn_clean
 ==>result{4}::[
     status=>success,
-    runtime=>millis::783.0000,
+    runtime=>millis::771.0000,
     command=>'mvn -f src/test/resources/scratch clean',
-    output=>!*/sys/tmp/69a6c7ba]
+    output=>!*/sys/tmp/7ee07d3b]
 mtron> */dev/scratch/command/mvn_build>>output
-==>{4}'WARNING: A restricted method in java.lang.System has been called'
-==>{4}'WARNING: java.lang.System::load has been called by org.fusesource.jansi.internal.JansiLoader in an unnamed module (file:/usr/share/maven/lib/jansi-2.4.1.jar)'
-==>{4}'WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module'
-==>{4}'WARNING: Restricted methods will be blocked in a future release unless native access is enabled'
-==>{4}''
 ==>{4}'WARNING: A terminally deprecated method in sun.misc.Unsafe has been called'
-==>{4}'WARNING: sun.misc.Unsafe::objectFieldOffset has been called by com.google.common.util.concurrent.AbstractFuture$UnsafeAtomicHelper (file:/usr/share/maven/lib/guava-33.2.1-jre.jar)'
-==>{4}'WARNING: Please consider reporting this to the maintainers of class com.google.common.util.concurrent.AbstractFuture$UnsafeAtomicHelper'
-==>{4}'WARNING: sun.misc.Unsafe::objectFieldOffset will be removed in a future release'
+==>{4}'WARNING: sun.misc.Unsafe::staticFieldBase has been called by com.google.inject.internal.aop.HiddenClassDefiner (file:/home/killswitch/.sdkman/candidates/maven/current/lib/guice-5.1.0-classes.jar)'
+==>{4}'WARNING: Please consider reporting this to the maintainers of class com.google.inject.internal.aop.HiddenClassDefiner'
+==>{4}'WARNING: sun.misc.Unsafe::staticFieldBase will be removed in a future release'
 ==>{4}'[INFO] Scanning for projects...'
 ==>{12}'[INFO] '
 ==>{4}'[INFO] --------------------< com.example.scratch:scratch >---------------------'
@@ -158,13 +153,13 @@ mtron> */dev/scratch/command/mvn_build>>output
 ==>{4}'[INFO]   from pom.xml'
 ==>{4}'[INFO] --------------------------------[ jar ]---------------------------------'
 ==>{4}'[INFO] --- resources:3.3.1:resources (default-resources) @ scratch ---'
-==>{4}'[INFO] skip non existing resourceDirectory /work/src/test/resources/scratch/src/main/resources'
+==>{4}'[INFO] skip non existing resourceDirectory /home/killswitch/software/metatron/src/test/resources/scratch/src/main/resources'
 ==>{4}'[INFO] --- compiler:3.13.0:compile (default-compile) @ scratch ---'
 ==>{4}'[INFO] Nothing to compile - all classes are up to date.'
 ==>{12}'[INFO] ------------------------------------------------------------------------'
 ==>{4}'[INFO] BUILD SUCCESS'
-==>{4}'[INFO] Total time:  0.247 s'
-==>{4}'[INFO] Finished at: 2026-09-16T07:17:38Z'
+==>{4}'[INFO] Total time:  0.259 s'
+==>{4}'[INFO] Finished at: 2026-09-18T04:33:58-06:00'
 ```
 The project's uri subgraph (tree) can be displayed using the `tree_widget::T` widget.
 
